--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function MM_swapImage() { //v3.0
   <p>Antes del 5 de Mayo, el día  28 de abril de 1862, tuvo lugar un enfrentamiento conocido como la Batalla de las Cumbres entre el Ejército Expedicionario Francés y el Ejército Mexicano. En este conflicto hubo cerca de 500 bajas francesas en contra de apenas 50 bajas mexicanas.</p>
   <p>El 2 de mayo parte el Ejército Expedicionario Francés desde San Agustín del Palmar en Veracruz con rumbo a cruzar la Sierra Madre Oriental y dirigirse hacia Puebla, era paso obligado para llegar a la capital mexicana.</p>
   <p>Otros generales mexicanos también participaron en la defensa de Puebla como es el caso de  las tropas de Oaxaca dirigidas por Porfirio Díaz. El centro de la línea lo defendió Francisco Lamadrid con las tropas del Estado de México y San Luis Potosí. La izquierda se apoyó en el cerro de Acueyametepec, ubicado en el norte de la ciudad, y en cuya cumbre están los Fuertes de Loreto y Guadalupe, con el general Miguel Negrete a la cabeza de la Segunda División de Infantería.  </p>
-  <p><img src="imagenes/Batalla.jpg" width="350" height="200"></p>
+  <p><img src="imagenes/Batalla.jpg" width="301" height="162"></p>
   
   <div data-role="main" class="ui-content" align="center">
 <div style="width:40%;">
@@ -177,7 +177,7 @@ function MM_swapImage() { //v3.0
 <div>
 <img src="res/android/mdpi.png" width="50" height="50">
 </div>
-<h4>Aplicación Cuatro, SDJE</h4>
+<h4>Aplicación Seis, SDJE</h4>
 </div>
 </div>
 
@@ -305,7 +305,7 @@ function MM_swapImage() { //v3.0
 <div>
   <h2>Dato interesante</h2>
   <p>En Europa el ejército francés era considerado el mejor del mundo. La derrota ante la resistencia mexicana generó en la población del país invasor una reacción de histeria y decepción. Sin embargo, como todo en la vida, la revancha está presente y los franceses solicitaron refuerzos a Napoleón III para ejecutar un exitoso contraataque, para así lograr una victoria que erigió el Segundo Imperio Mexicano a cargo de Maximiliano de Habsburgo.</p>
-  <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image31','','imagenes/Extra2.jpg',0)"><img src="imagenes/Extra.jpg" width="338" height="149" id="Image31"></a></p>
+  <p><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image31','','imagenes/Extra2.jpg',0)"><img src="imagenes/Extra.jpg" width="272" height="118" id="Image31"></a></p>
 </div>
 </div>
 
@@ -314,7 +314,7 @@ function MM_swapImage() { //v3.0
 <div>
 <img src="res/android/mdpi.png" width="50" height="50">
 </div>
-<h4>Aplicacion Cuatro,SDJE</h4>
+<h4>Aplicacion Seis,SDJE</h4>
 </div>
 </div>
 </body>
